--- a/src/scss/base/_mixins.scss
+++ b/src/scss/base/_mixins.scss
@@ -26,6 +26,7 @@
     display: inline-block;
     font-weight: 700;
     border: none;
+    border-radius: 1rem;
     transition-property: background-color;
     transition-duration: .3s;
     text-align: center;
