--- a/src/scss/dashboard/_dashboard.scss
+++ b/src/scss/dashboard/_dashboard.scss
@@ -13,10 +13,21 @@
 		flex: 1;
 	}
 	.contenido {
-        padding: 2rem;
+		padding: 2rem;
 		.nombre-pagina {
-            font-size: 2.8rem;
-            text-align: center;
+			font-size: 2.8rem;
+			text-align: center;
+		}
+	}
+
+	.formulario input:not([type="submit"]) {
+		background-color: v.$blanco;
+	}
+	input[type="submit"] {
+		@include m.boton(v.$indigo, v.$blanco);
+		& {
+			padding: 1rem;
+			font-weight: bold;
 		}
 	}
 }
