--- a/src/scss/dashboard/_sidebar.scss
+++ b/src/scss/dashboard/_sidebar.scss
@@ -17,6 +17,7 @@
 		a {
 			color: v.$blanco;
 			display: block;
+			text-align: center;
 			margin-bottom: 1.5rem;
 			padding: 0.7rem;
 			transition-property: background-color;
