Anadiendo Formulario para Anadir Tareas a un proyecto - Creacion del boton de anadir tareas - Anadiendo JS para mostrar el Formulario - Creacion de el modal para anadir tareas - Aplicacion CSS al Modal - Anadiendo una animacion al Modal - Agregando un boton para cerrar el modal - Finalizacion del CSS para el modal

--- a/src/scss/dashboard/_sidebar.scss
+++ b/src/scss/dashboard/_sidebar.scss
@@ -17,11 +17,19 @@
 		a {
 			color: v.$blanco;
 			display: block;
-			text-align: center;
+			text-align: left;
 			margin-bottom: 1.5rem;
 			padding: 0.7rem;
 			transition-property: background-color;
 			transition-duration: 300ms;
+
+			@include m.telefono {
+				text-align: center;
+			}
+
+			@include m.tablet {
+				text-align: left;
+			}
 
 			&:hover,
 			&.activo {
