Anadiendo tareas a ls proyectos - Validaciones para las tareas - Creacion alertas para las Validaciones - Creacion una tabla para crear tareas - Creacion del modelo de tareas - Creacion del routing y controladores para Tareas - Enviando peticiones al servidor con Fetch API - Obteniendo el proyectos Actual - Verificaciones si el proyecto existe     o perteneces a quien desea anadir una tarea - Insersion de tareas en la base de datos

--- a/src/scss/dashboard/_modal.scss
+++ b/src/scss/dashboard/_modal.scss
@@ -26,11 +26,19 @@
 			display: block;
 		}
 
+		input[type="text"] {
+			border: 1px solid v.$gris;
+		}
+
 		.opciones {
 			display: flex;
 			justify-content: space-between;
 			.submit-nueva-tarea {
 				@include m.boton(v.$indigo, v.$blanco);
+
+				&.ocultar {
+					visibility: hidden;
+				}
 			}
 
 			.cerrar-modal {
