Listando las tareas del proyecto - Creacion de una API para mostrar las tareas - Obteniendo las tareas en la pagina de proyecto - Script para mostrar las tareas - Construccion de la interfaz - Agregando tareas al interfaz - Actualizando el arreglo de tareas y actualizando     el DOM al anadir tareas

--- a/src/scss/dashboard/_proyectos.scss
+++ b/src/scss/dashboard/_proyectos.scss
@@ -16,7 +16,7 @@
 		@include m.grid(2, 2rem);
 	}
 	@include m.desktop {
-		@include m.grid(3, 2rem);
+		@include m.grid(3, 2.5rem);
 	}
 
 	.proyecto {
@@ -27,12 +27,12 @@
 		padding: 2rem;
 		line-height: 2;
 		border-radius: 0.5rem;
-        justify-content: center;
-		transition-property: background-color;
-		transition-duration: 300ms;
+		justify-content: center;
+		transition: background-color 0.3s ease, transform 0.3s ease;
 
 		&:hover {
 			background-color: darken(v.$indigo, 5%);
+			transform: scale(1.1);
 		}
 
 		a {
