--- a/src/scss/dashboard/_dashboard.scss
+++ b/src/scss/dashboard/_dashboard.scss
@@ -11,9 +11,10 @@
 
 	.principal {
 		flex: 1;
+		overflow: scroll;
 	}
 	.contenido {
-		padding: 2rem;
+		padding: 2.2rem;
 		.nombre-pagina {
 			font-size: 2.8rem;
 			text-align: center;
