--- a/src/scss/componentes/_alertas.scss
+++ b/src/scss/componentes/_alertas.scss
@@ -1,21 +1,34 @@
 @use "base/variables" as v;
 @use "base/mixins" as m;
 
-.alerta{
-    padding: 2rem 1rem 2rem 2rem;
-    text-transform: uppercase;
-    font-weight: 900;
-    margin: 1rem 0;
-    font-size: 1.4rem;
-    max-width: 80rem;
-    &.error{
-        background-color: lighten(v.$rojo, 60%);
-        border-left: .5rem solid v.$rojo;
-        color: v.$rojo;
-    }
-    &.exito{
-        background-color: lighten(v.$verde, 60%);
-        border-left: .5rem solid v.$verde;
-        color: v.$verde;
-    }
+.alerta {
+	padding: 2rem 1rem 2rem 2rem;
+	text-transform: uppercase;
+	font-weight: 900;
+	margin: 1rem 0;
+	font-size: 1.4rem;
+	max-width: 80rem;
+	&.error {
+		background-color: lighten(v.$rojo, 60%);
+		border-left: 0.5rem solid v.$rojo;
+		color: v.$rojo;
+	}
+	&.exito {
+		background-color: lighten(v.$verde, 60%);
+		border-left: 0.5rem solid v.$verde;
+		color: v.$verde;
+	}
+}
+
+.swal2-popup {
+	font-size: 16px;
+	width: 500px;
+}
+
+.swal2-title {
+	font-size: 24px;
+}
+
+.swal2-text {
+	font-size: 18px;
 }
