--- a/src/scss/dashboard/_sidebar.scss
+++ b/src/scss/dashboard/_sidebar.scss
@@ -2,13 +2,60 @@
 @use "base/mixins" as m;
 
 .sidebar {
+	opacity: 0;
 	background-color: v.$indigo;
-	padding: 2rem;
+	height: 0;
+	overflow: hidden;
+	transition-property: opacity;
+	transition-duration: 500ms;
 
-	h2 {
-		color: v.$blanco;
-		margin: 0;
-		text-align: center;
+	&.mostrar {
+		padding: 2rem;
+		opacity: 1;
+		height: 100%;
+		position: absolute;
+		inset: 0;
+		background-color: rgb(0 0 0 / 0.9);
+
+		@include m.tablet {
+			display: none;
+		}
+	}
+	&.ocultar {
+		opacity: 0;
+	}
+
+	@include m.tablet {
+		height: 100%;
+		opacity: 1;
+		padding: 2rem;
+		background-color: v.$indigo;
+	}
+
+	.contenedor-sidebar {
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+
+		h2 {
+			color: v.$blanco;
+			margin: 0;
+			text-align: center;
+		}
+		.cerrar-menu {
+			display: flex;
+			justify-content: center;
+			height: 2rem;
+			width: 2rem;
+			img {
+				&:hover {
+					cursor: pointer;
+				}
+			}
+			@include m.tablet {
+				display: none;
+			}
+		}
 	}
 
 	.sidebar-nav {
@@ -18,24 +65,36 @@
 			color: v.$blanco;
 			display: block;
 			text-align: left;
-			margin-bottom: 1.5rem;
 			padding: 0.7rem;
 			transition-property: background-color;
 			transition-duration: 300ms;
-
-			@include m.telefono {
-				text-align: center;
-			}
-
-			@include m.tablet {
-				text-align: left;
-			}
+			font-size: 2.4rem;
+			margin-bottom: 2.5rem;
+			text-align: center;
 
 			&:hover,
 			&.activo {
 				background-color: darken($color: v.$indigo, $amount: 20%);
 				border-radius: 0.5rem;
 			}
+
+			@include m.tablet {
+				font-size: 1.6rem;
+				margin-bottom: 1.5rem;
+				text-align: left;
+			}
+		}
+	}
+
+	.cerrar-sesion-mobile {
+		margin-top: 10rem;
+
+		.cerrar-sesion {
+			@include m.boton(v.$indigo, v.$blanco);
+		}
+
+		@include m.tablet {
+			display: none;
 		}
 	}
 }
