Actualizacion de Perfil, Email y password - Creacion del Formulario de perfil - Validando los datos del perfil - Almacenando los cambios al estar validados - Validando que el usuario no modifique el Email     a una cuenta existente - Creacion del formulario para modificar el password - Validando los password - Comprobando que el password actual sea correcto - Almacenando el nuevo password

--- a/src/scss/dashboard/_dashboard.scss
+++ b/src/scss/dashboard/_dashboard.scss
@@ -31,4 +31,11 @@
 			font-weight: bold;
 		}
 	}
+
+	.enlace{
+		color: v.$indigo;
+		&:hover{
+			color: darken($color: v.$indigo, $amount: 20%);
+		}
+	}
 }
