Habilitando Dark mode - Creando Media Query para Dark mode - Ajustando los formularios - Dark Mode al dashboard - Dark Mode a las tareas - Barra de scroll personalizada - Mejoras en el menu mobile en dark mode - otros ajustes de css

--- a/src/scss/dashboard/_dashboard.scss
+++ b/src/scss/dashboard/_dashboard.scss
@@ -12,6 +12,20 @@
 	.principal {
 		flex: 1;
 		overflow: scroll;
+		@include m.tablet {
+			// Ocultar barra inferior
+			overflow-x: hidden;
+
+			// Estilos a la barra lateal
+			&::-webkit-scrollbar {
+				width: 0.9rem;
+			}
+
+			&::-webkit-scrollbar-thumb {
+				background-color: v.$indigo;
+				border-radius: 5px;
+			}
+		}
 	}
 	.contenido {
 		padding: 2.2rem;
