Implementacion de CRUD de proyectos - Se agrego el controlador ProyectoController - Se agrego la vista gestionar-proyectos - Se agrego la ruta para gestionar proyectos - Se agrego el archivo js proyectos.js - Se agrego el archivo scss gestion.scss - Se modifico el controlador DashboardController - Se modifico el modelo Proyecto - Se modifico el archivo js tareas.js (re ajustes) - Se modifico el archivo scss darkmode.scss (re ajustes para la nueva pagina) - Se implemento uso de API para gestionar proyectos - Otros pequenos ajustes. - Base de datos actualzada

--- a/src/scss/dark/_darkmode.scss
+++ b/src/scss/dark/_darkmode.scss
@@ -27,7 +27,8 @@
 
 	.descripcion-pagina,
 	.nombre-pagina,
-	.listado-tareas .no-tareas {
+	.listado-tareas .no-tareas,
+	.listado-proyectos-api .no-proyectos {
 		color: darken($color: v.$grisClaro, $amount: 15%);
 	}
 
@@ -109,7 +110,8 @@
 		}
 	}
 
-	.listado-tareas .tarea {
+	.listado-tareas .tarea,
+	.proyecto-api {
 		background-color: lighten($color: $grisOscuro, $amount: 10%);
 		border-radius: 0.5rem;
 		border: none;
