--- a/src/scss/dashboard/_gestion.scss
+++ b/src/scss/dashboard/_gestion.scss
@@ -1,26 +1,26 @@
 @use "base/variables" as v;
 @use "base/mixins" as m;
 
-.contenedor-nueva-tarea {
+.contenedor-nuevo-proyecto {
 	display: flex;
 	justify-content: center;
 
-	.agregar-tarea {
+	.agregar-proyecto {
 		@include m.boton(v.$cyan, v.$blanco);
 	}
 }
 
-.listado-tareas {
+.listado-proyectos-api {
 	list-style: none;
 	padding: 0;
 	margin-top: 3rem;
 
-	.no-tareas {
+	.no-proyectos {
 		text-align: center;
 	}
 }
 
-.tarea {
+.proyecto-api {
 	padding: 0.5rem 2rem;
 	border-bottom: 2px solid darken(v.$gris, 5%);
 	margin-bottom: 1rem;
@@ -33,8 +33,7 @@
 
 	p {
 		font-size: 1.6rem;
-
-		&:hover{
+		&:hover {
 			cursor: pointer;
 		}
 	}
@@ -56,21 +55,15 @@
 				transform: scale(1.1);
 			}
 		}
-		.completa {
-			background-color: v.$azul;
-			&:hover {
-				background-color: darken(v.$azul, 10%);
-			}
-		}
 
-		.pendiente {
+		.editar-proyecto {
 			background-color: v.$naranja;
 			&:hover {
 				background-color: darken(v.$naranja, 10%);
 			}
 		}
 
-		.eliminar-tareas {
+		.eliminar-proyecto {
 			background-color: v.$rojo;
 			&:hover {
 				background-color: darken(v.$rojo, 10%);
